update crud logic