@@ -7,7 +7,9 @@ import org.springframework.stereotype.Service;
 
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class TransactionQueryService {
@@ -18,14 +20,22 @@ public class TransactionQueryService {
 
     public List<BondTransactionVO> loadAllTransactions(String type) {
         //TODO enrich BOND product info like coupon, start, maturity with Product service
-        return  transactionRepository.getAllTransactionsByType(type).stream()
-                .map(r->new BondTransactionVO(r, dateFormat)).toList();
+        List<BondTransactionVO> vos = transactionRepository.getAllTransactionsByType(type).stream()
+                .map(r->new BondTransactionVO(r, dateFormat)).collect(Collectors.toList());
+        Collections.reverse(vos);
+        return vos;
     }
 
     public List<BondTransactionVO> loadTransactionsByCustomer(String customer) {
-        return  transactionRepository.getAllTransactionsByCustomer(customer).stream()
-                .map(r->new BondTransactionVO(r, dateFormat)).toList();
+        List<BondTransactionVO> vos = transactionRepository.getAllTransactionsByCustomer(customer).stream()
+                .map(r->new BondTransactionVO(r, dateFormat)).collect(Collectors.toList());
+        Collections.reverse(vos);
+        return vos;
     }
 
+    public List<BondTransactionVO> loadTransactionsHistory(String tradeId) {
+        return  transactionRepository.getDataHistory(tradeId).stream()
+                .map(r->new BondTransactionVO(r, dateFormat)).toList();
+    }
 
 }
